@startuml
skinparam shadowing false
skinparam linetype ortho
skinparam monochrome true
skinparam nodesep 70
skinparam ranksep 70
skinparam dpi 300

entity "CLIENT" as client {
  * id : INTEGER <<PK>>
  --
  name : TEXT
  login : TEXT
  password : TEXT
  phone : TEXT
}

entity "ADMIN" as admin {
  * id : INTEGER <<PK>>
  --
  name : TEXT
  login : TEXT
  password : TEXT
}

entity "ANIMAL" as animal {
  * id : INTEGER <<PK>>
  --
  name : TEXT
  species : TEXT
  breed : TEXT
  age : INTEGER
  gender : TEXT
  description : TEXT
  photo_url : TEXT
  is_available : BOOLEAN
  added_at : DATETIME
}

entity "ADOPTION_REQUEST" as request {
  * id : INTEGER <<PK>>
  --
  client_id : INTEGER <<FK>>
  animal_id : INTEGER <<FK>>
  status : TEXT
  created_at : DATETIME
  updated_at : DATETIME
  comment : TEXT
}

' Связи
client ||--o{ request : ""
animal ||--o{ request : ""
admin ||--o{ animal : ""

@enduml